@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150509"
-#define public MagickPackageReleaseDate "snapshot-20150509"
+#define public MagickPackageVersionAddendum ".020150510"
+#define public MagickPackageReleaseDate "snapshot-20150510"
