@@ -35,6 +35,14 @@
 <div class="document">
 
 
+<p>2015-05-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/utility.c (GetGeometry): Fix handling of area geometries
+in the form &quot;5000000&#64;&quot;.  Resolves SourceForge issue #299 &quot;-resize
+with &#64; and &gt; in geometry specification&quot;.</li>
+</ul>
+</blockquote>
 <p>2015-05-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
